--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "wallet",
   "version": "1.2.0",
   "description": " Passort authentication",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "lint": "eslint --fix src",
     "test": "mocha --exit"
   },
